--- a/css/intermediate.css
+++ b/css/intermediate.css
@@ -12,7 +12,7 @@ body {
 
 #container {
     display: flex;
-    background-color: black;
+    background-color: hsla(0, 0%, 10%);
     height: 100%;
     align-items: center;
     flex-direction: column;
@@ -31,7 +31,7 @@ header {
 }
 
 .title {
-    color: gainsboro;
+    color: whitesmoke;
     font-size: 2.5rem;
     font-weight: bold;
     margin: 0.4rem 0 0.4rem 0;
