--- a/css/homepage.css
+++ b/css/homepage.css
@@ -47,8 +47,10 @@ div.select h1{
     margin-left: 25px;
 }
 
-input[type="easy"], input[type="intermediate"], input[type="hard"]{
+div.easy, div.intermediate, div.hard{
+    width: 260px;
     margin: 20px auto;
+    margin-left: 25px;
     display: inline-block;
     text-align: center;
     background: hsla(0, 0%, 10%);
@@ -65,15 +67,15 @@ input[type="easy"], input[type="intermediate"], input[type="hard"]{
     font-size: 125%;
 }
 
-input[type="easy"]{
+div.easy a{
     color: greenyellow;
 }
 
-input[type="intermediate"]{
+div.intermediate a{
     color: goldenrod;
 }
 
-input[type="hard"]{
+div.hard a{
     color: crimson;
 }
 
