--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,18 +6,6 @@ div.text{
     color: whitesmoke;
 }
 
-.green{
-    color: green;
-}
-
-.yellow{
-    color: goldenrod;
-}
-
-.gray{
-    color: lightslategray;
-}
-
 div.title{
     display: flex;
     align-items: center;
@@ -47,9 +35,9 @@ div.select h1{
     margin-left: 25px;
 }
 
-input[type="easy"], input[type="intermediate"], input[type="hard"]{
+div.easy, div.intermediate, div.hard{
+    margin-left: -50px;
     margin: 20px auto;
-    margin-left: 25px;
     display: inline-block;
     text-align: center;
     background: hsla(0, 0%, 10%);
@@ -67,15 +55,15 @@ input[type="easy"], input[type="intermediate"], input[type="hard"]{
     font-size: 125%;
 }
 
-input[type="easy"]{
+div.easy a{
     color: greenyellow;
 }
 
-input[type="intermediate"]{
+div.intermediate a{
     color: goldenrod;
 }
 
-input[type="hard"]{
+div.hard a{
     color: crimson;
 }
 
