--- a/css/intermediate.css
+++ b/css/intermediate.css
@@ -4,8 +4,6 @@ body{
 
 #title {
     display: flex;
-    background-color: black;
-    height: 100%;
     align-items: center;
     flex-direction: column;
     color: whitesmoke;
@@ -23,29 +21,7 @@ body{
     height: 600px;
 }
 
-header {
-    border-bottom: 1px solid rgb(58, 58, 60);
-}
-
-.title {
-    color: gainsboro;
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin: 0.4rem 0 0.4rem 0;
-    text-align: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-#board-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    overflow: hidden;
-}
-
-#board {
+.grid{
     display: grid;
     grid-template-rows: repeat(6, auto);
     grid-template-columns: repeat(5, auto);
@@ -91,4 +67,3 @@ header {
       transform: scaleY(1);
     }
   }
-
