--- a/css/easy.css
+++ b/css/easy.css
@@ -67,3 +67,37 @@ body{
       transform: scaleY(1);
     }
   }
+
+  div.return {
+    position: absolute;
+    left: 50%;
+    bottom: 15%;
+    width: 300px;
+    margin-left: -168px;
+
+    font-size: 130%;
+}
+
+div.button {
+    margin-left: -50px;
+    margin: 15px auto;
+    display: inline-block;
+    text-align: center;
+    background: hsla(0, 0%, 10%);
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 16px;
+    width: 300px;
+    border: solid;
+    border-radius: 4px;
+    border-top-color:whitesmoke;
+    border-right-color: whitesmoke;
+    border-bottom-color: whitesmoke;
+    border-left-color: whitesmoke;
+
+    font-size: 125%;
+}
+
+div.button a {
+    color: whitesmoke;
+}
