--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,5 @@
 body{
-    background-color: hsla(0, 0%, 10%);
+    background-color: hsla(120, 0%, 7%, 1)
 }
 
 div.text{
@@ -17,6 +17,25 @@ div.title{
 
 div.title h1{
     border-bottom: 1px solid whitesmoke;
+}
+
+div.signout {
+    position: absolute;
+    top: 3%;
+    right: 5%;
+}
+
+input[type="submit"] {
+    justify-content: center;
+    margin-left: 20px;
+
+    background-color: dimgray;
+    color: whitesmoke;
+
+    padding: 16px;
+    min-width: 100%;
+    border-radius: 3px;
+    font-size: 1.15rem;
 }
 
 div.select{
@@ -37,7 +56,7 @@ div.select h1{
 
 div.easy, div.intermediate, div.hard{
     margin-left: -50px;
-    margin: 20px auto;
+    margin: 15px auto;
     display: inline-block;
     text-align: center;
     background: hsla(0, 0%, 10%);
@@ -70,9 +89,9 @@ div.hard a{
 div.instructions{
     position: absolute;
     left: 50%;
-    bottom: 10%;
-    width: 700px;
-    margin-left: -350px;
+    bottom: 15%;
+    width: 750px;
+    margin-left: -375px;
 
     font-size: 130%;
 }
@@ -81,3 +100,42 @@ div.instructions h1{
     text-align: center;
 }
 
+#sample{
+    position: absolute;
+    bottom: -20%;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 600px;
+}
+
+.grid{
+    display: grid;
+    grid-template-rows: repeat(6, auto);
+    grid-template-columns: repeat(5, auto);
+}
+
+.box{
+    width: 60px;
+    height: 60px;
+    border: 1px solid darkgray;
+    margin: 3.5px;
+    color: whitesmoke;
+    text-transform: uppercase;
+    display: grid;
+    place-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 3rem;
+}
+
+.box.empty{
+    background-color: grey;
+}
+
+.box.close{
+    background-color: goldenrod;
+}
+
+.box.correct{
+    background-color: green;
+}
