--- a/css/intermediate.css
+++ b/css/intermediate.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: hsla(120, 0%, 7%, 1)
 }
 
@@ -21,13 +21,13 @@ body{
     height: 600px;
 }
 
-.grid{
+.grid {
     display: grid;
     grid-template-rows: repeat(6, auto);
     grid-template-columns: repeat(5, auto);
 }
 
-.box{
+.box {
     width: 60px;
     height: 60px;
     border: 1px solid darkgray;
@@ -40,30 +40,66 @@ body{
     font-size: 3rem;
 }
 
-.box.empty{
+.box.empty {
     background-color: grey;
 }
 
-.box.close{
+.box.close {
     background-color: goldenrod;
 }
 
-.box.correct{
+.box.correct {
     background-color: green;
 }
 
 .animated {
     animation: flip 0.5s ease;
-  }
-  
-  @keyframes flip {
+}
+
+@keyframes flip {
     0% {
-      transform: scaleY(1);
+        transform: scaleY(1);
     }
+
     50% {
-      transform: scaleY(0);
+        transform: scaleY(0);
     }
+
     100% {
-      transform: scaleY(1);
+        transform: scaleY(1);
     }
-  }
+}
+
+div.return {
+    position: absolute;
+    left: 50%;
+    bottom: 15%;
+    width: 300px;
+    margin-left: -168px;
+
+    font-size: 130%;
+}
+
+div.button {
+    margin-left: -50px;
+    margin: 15px auto;
+    display: inline-block;
+    text-align: center;
+    background: hsla(0, 0%, 10%);
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 16px;
+    width: 300px;
+    border: solid;
+    border-radius: 4px;
+    border-top-color:whitesmoke;
+    border-right-color: whitesmoke;
+    border-bottom-color: whitesmoke;
+    border-left-color: whitesmoke;
+
+    font-size: 125%;
+}
+
+div.button a {
+    color: whitesmoke;
+}
