--- a/css/signin.css
+++ b/css/signin.css
@@ -2,11 +2,21 @@ body{
     background-color: hsla(120, 0%, 7%, 1)
 }
 
+div.title{
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    font-size: 250%;
+    font-weight: bold;
+}
+
 div.signUp{
     color: whitesmoke;
     position: absolute;
     left: 30%;
-    top: 10%;
+    top: 20%;
 
     font-size: 175%;
 }
@@ -15,7 +25,7 @@ div.signIn{
     color: whitesmoke;
     position: absolute;
     right: 30%;
-    top: 10%;
+    top: 20%;
 
     font-size: 175%;
 }
